# activegraph-lab

./: .gitignore  .replit  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  replit.md
activegraph_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE.md  CONTRACT.md  DECISIONS.md  INTERFACE.md  ROADMAP.md  UI_NOTES.md
drafts/: cross-repo-entry-point-discovery-works.md  inconsistent-relation-encoding-breaks-view-traversal.md  lab-note-2698859a.md  lab-note-450d008d.md  lab-note-4fe7a00d.md  lab-note-e76edf71.md  work-dispatch-capability-gap-research-behaviors.md
lab_pack/: CHANGELOG.md  README.md  __init__.py  behaviors.py  bundle.py  code_worker.py  compat.py  github_read.py  github_write.py  graph_code.py  heartbeat.py  kernel.py  llm.py  object_types.py  repo_sandbox.py  research_worker.py  sandbox_runner.py  seams.py  settings.py  storage.py  tools.py  watchdog.py
lab_pack/fixtures/: alias_map_guard.yaml  bootstrap.yaml  branch_lifecycle.yaml  budget_cap_restart.yaml  budget_starvation.yaml  capability_gap.yaml  capability_self_check.yaml  charter.yaml  claim_hygiene.yaml  code_authoring.yaml  code_worker.yaml  crawl_stall.yaml  decision_rationale.yaml  draft_writer.yaml  editorial.yaml  github_read.yaml  graph_code.yaml  heartbeat.yaml  model_params.yaml  model_routing.yaml  operator_controls.yaml  paused_boot.yaml  phantom_work.yaml  plan_gate.yaml  red_green_proof.yaml  rejection_lifecycle.yaml  research_worker.yaml  routing.yaml  run_fixtures.py  seam_no_bypass.yaml  seam_proposal.yaml  seam_verbatim.yaml  seams.yaml  search_replace_authoring.yaml  self_repair.yaml  submit_pr.yaml  target_file_delivery.yaml  thread_equals_branch.yaml  truthful_steering.yaml
lab_pack/prompts/: answer.md  charter.md  code_author.md  code_worker.md  draft_writer.md  interpret.md  plan.md  research_worker.md  seam_writer.md
lab_pack/tests/: test_source_urls_order.py
scripts/: check_ui.mjs  check_ui.py  overnight.py  overnight_report.py  smoke.py  test_auth.py  test_chat_robustness.py  test_mcp.py  test_oauth.py  test_postgres.py  test_public_safety.py  test_readiness.py  test_sandbox_isolation.py
server/: blog.py  lab_server.py  mcp.py  oauth.py
ui/: app.js  index.html  style.css
